fixed bugs, topped overflowing

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .main-footer {
   color: #283593;
   background-color: #e8eaf6;
-  padding-top: 10px;
+  padding: 10px 5px 0 5px;
   width: 100%;
   position: fixed;
   bottom: 0;
